# adp

./: README.md  __init__.py  __main__.py  comparison_functions.py  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
