[metadata]
name = "adp",
version = "0.0.1",
author="Pavel Shilov",
author_email="shilovps@basealt.ru"
description="adp",
    long_description="Package comparison tool",
    long_description_content_type="text/markdown",
url="https://github.com/zerospirit79/adp",
    packages=find_packages(),
    install_requires=[
        "requests",
        "packaging",
        "os"
    ],
    entry_points={
        "console_scripts": [
            "adp = adp.__main__:main",
        ],
    },
    classifiers=
        "Programming Language :: Python :: 3"
